============
3/31/2015 - RELEASE 1.5
============
-Encompasses all changes since the 1.4 tagged release


3/31/2016
---------
-Merge of Inveigh 1.1 update and privesc/tater
-Updated of Invoke-Mimikatz.ps1 source
-Updated mimikatz dlls to version 2.1 alpha
-Included modification to suppress cmd.exe when spawned via PTH.

3/30/2016
---------
-Added loading of external modules with 'load /path/modules/'

3/25/2016
---------
-RESTful API modifications
-expanded agent/server epoch check to +/- 12 hours
-stagers now run -sta

3/24/2016
---------
-RESTful API modifications

3/22/2016
---------
-added auth to RESTful API, additional API fixes

3/21/2016
---------
-start of RESTful API implementation

3/19/2016
---------
-PowerView.ps1 update and multiple related module additions
-added github issue templates
-added situational_awareness/network/powerview/get_gpo_computer

3/11/2016
---------
-added privesc/getsystem
-bug fix for Invoke-PsExec and some x64 pointers

3/3/2016
---------
-first pass at stager retry interval
-download chunking modified

2/17/2016
---------
- '--debug 2' now displays debug information to the console as well as the empire.debug file
-added privesc/mcafee_sitelist

1/15/2016
---------
-start of command line option integration, use './empire -h' to see options
-bug fixes
-'searchmodule' with no arguments now lists all modules

1/14/2016
---------
-Fix for some UTF-8 encoding issues

1/10/2016
----------
-Corrected several bugs in how the workingHours window is handled in the agent


============
12/29/2015 - RELEASE 1.4
============
-Encompasses all changes since 1.3.1 tagged release


12/29/2015
----------
-Added situational_awareness/network/powerview/find_managed_security_groups to integrate @stufus' new code
-Fixed various issues with agent profile handling
-'DefaultProfile' option in listener menu is now tab-completable and can take a path to a profile.txt

12/28/2015
----------