@@ -1,3 +1,9 @@
+4/1/2016
+---------
+-listener starting now returns more verbose errors on failure in console and API
+-merge of @mynameisiv's .jpg screenshot PR
+-Fix for path errors in some cases for ./setup/setup_database.py
+
 ============
 3/31/2015 - RELEASE 1.5
 ============
